--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -8,12 +8,12 @@ kubernetes_user:
 
 kubernetes_defnitions_root_dir: /opt/provision/kubernetes
 
-registry_servername: registry.default
-kubernetes_registry_port: 30500
-kubernetes_registry_url: 127.0.0.1:{{ kubernetes_registry_port }}
+docker_registry_servername: registry.default
+docker_registry_port: 30500
+docker_registry_url: 127.0.0.1:{{ docker_registry_port }}
 
 
-registry_notification_endpoints:
+docker_registry_notification_endpoints:
   - name: docker-registry-ui
     url: http://docker-registry-ui.default:8000/docker-regitry-ui/api/events
     headers:
