--- a/ansible/roles/kubernetes-apps/tasks/apps/home-nodered.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/home-nodered.yml
@@ -2,7 +2,7 @@
 
 - name: Build and push Node-RED image
   docker_image:
-    name: "{{ kubernetes_registry_url }}/nodered"
+    name: "{{ docker_registry_url }}/nodered"
     source: build
     build:
       path: "{{ kubernetes_app_root_path }}/home/nodered/build"
