--- a/ansible/roles/kubernetes-apps/tasks/apps/infra-docker-registry.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/infra-docker-registry.yml
@@ -3,17 +3,17 @@
 - name: Read certificate files
   slurp:
     src: "{{ item }}"
-  register: registry_generated_certificate_files
+  register: docker_registry_generated_certificate_files
   with_items:
     - "{{ custom_ssl_pki_root_dir }}/cluster/ca.crt"
-    - "{{ custom_ssl_pki_root_dir }}/cluster/registry/server.crt"
-    - "{{ custom_ssl_pki_root_dir }}/cluster/registry/server.key"
+    - "{{ custom_ssl_pki_root_dir }}/cluster/docker-registry/server.crt"
+    - "{{ custom_ssl_pki_root_dir }}/cluster/docker-registry/server.key"
 
 - name: Deploy Docker registry
   k8s:
     definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
     state: present
   with_fileglob:
-    - "{{ kubernetes_app_root_path }}/infra/registry/deploy/*.yaml*"
+    - "{{ kubernetes_app_root_path }}/infra/docker-registry/deploy/*.yaml*"
   become: yes
   become_user: "{{ kubernetes_user.name }}"
