Add activation flag for each app

--- a/ansible/roles/kubernetes-apps/defaults/main/auth-lemonldap.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main/auth-lemonldap.yml
@@ -1,5 +1,7 @@
 ---
 
+lemonldap_enabled: true
+
 lemonldap_fastcgi_port: 9000
 lemonldap_persistent_volume_path: /var/lib/lemonldap-ng-pv
 lemonldap_ldap_servername: "{{ openldap_ldap_servername }}"
