--- a/ansible/roles/kubernetes-apps/defaults/main/home-homeassistant.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main/home-homeassistant.yml
@@ -1,5 +1,7 @@
 ---
 
+homeassistant_enabled: true
+
 homeassistant_mysql_user: homeassistant
 homeassistant_mysql_database: homeassistant
 homeassistant_mysql_password: clear_password
