--- a/ansible/roles/kubernetes-apps/defaults/main/infra-docker-registry.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main/infra-docker-registry.yml
@@ -1,5 +1,7 @@
 ---
 
+docker_registry_enabled: true
+
 docker_registry_servername: registry.default
 docker_registry_port: 30500
 docker_registry_url: 127.0.0.1:{{ docker_registry_port }}
