--- a/ansible/roles/kubernetes-apps/defaults/main/infra-zonemta.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main/infra-zonemta.yml
@@ -1,5 +1,7 @@
 ---
 
+zonemta_enabled: true
+
 zonemta_smtp_servername: zonemta.default
 zonemta_feeder_authentication_enabled: true
 zonemta_feeder_authentication_username: smtp
