--- a/ansible/roles/kubernetes-apps/defaults/main/stream-airsonic.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main/stream-airsonic.yml
@@ -1,5 +1,7 @@
 ---
 
+airsonic_enabled: true
+
 airsonic_context_path: /airsonic
 airsonic_extra_java_opts:
   # https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#howto-use-tomcat-behind-a-proxy-server
