--- a/ansible/roles/kubernetes-apps/defaults/main/auth-phpldapadmin.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main/auth-phpldapadmin.yml
@@ -1,5 +1,7 @@
 ---
 
+phpldapadmin_enabled: true
+
 phpldapadmin_ldap_servername: "{{ openldap_ldap_servername }}"
 phpldapadmin_bind_id: "{{ openldap_ldap_readonly_user_dn }}"
 phpldapadmin_bind_password: "{{ openldap_ldap_readonly_user_password }}"
