--- a/ansible/roles/kubernetes-apps/defaults/main/monitoring-grafana.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main/monitoring-grafana.yml
@@ -1,5 +1,7 @@
 ---
 
+grafana_enabled: true
+
 grafana_admin_user: admin
 grafana_admin_password: clear_password
 grafana_ldap_servername: "{{ openldap_ldap_servername }}"
