--- a/ansible/roles/kubernetes-apps/tasks/apps/infra-docker-registry.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/infra-docker-registry.yml
@@ -17,3 +17,11 @@
     - "{{ kubernetes_app_root_path }}/infra/docker-registry/deploy/*.yaml*"
   become: yes
   become_user: "{{ kubernetes_user.name }}"
+
+- name: Wait for Docker registry to be available
+  wait_for:
+    host: 127.0.0.1
+    port: "{{ docker_registry_port }}"
+    state: started
+    sleep: 2
+    timeout: 30
