Add ufw rules for applications exposed on the Keepalived virtual IP

--- a/ansible/roles/keepalived/defaults/main.yml
+++ b/ansible/roles/keepalived/defaults/main.yml
@@ -5,3 +5,6 @@
 keepalived_is_master: false
 keepalived_priority: 100
 keepalived_auth_pass: clear_pass
+
+# Enable applications exposed via keepalived
+keepalived_ufw_applications: []
