--- a/ansible/roles/keepalived/tasks/main.yml
+++ b/ansible/roles/keepalived/tasks/main.yml
@@ -6,6 +6,11 @@
     value: "1"
     state: present
 
+- name: Configure UFW for Keepalived
+  import_tasks: ../../firewall/tasks/add-applications.yml
+  vars:
+    ufw_applications: "{{ keepalived_ufw_applications | default([]) }}"
+
 - name: Allow VRRP multicast
   ufw:
     dest: 224.0.0.18
