--- a/ansible/roles/kubernetes-apps/defaults/main/infra-unifi.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main/infra-unifi.yml
@@ -2,5 +2,5 @@
 
 unifi_enabled: true
 
-# Expose Unifi private services on the Node IP
+# Expose Unifi private services on the Node IP or a virtual IP
 #unifi_private_ip:
