--- a/apps/monitoring/release-watcher/config/watchers.yaml
+++ b/apps/monitoring/release-watcher/config/watchers.yaml
@@ -130,6 +130,14 @@ watchers:
     excludes:
       - latest
   - type: docker_registry
+    repo: registry-1.docker.io
+    image: gotify/server
+    tag: 2.0.5
+    includes:
+      - "[0-9]+\\.[0-9]+\\.[0-9]+.*"
+    excludes:
+      - 1\..*
+  - type: docker_registry
     repo: quay.io
     image: kubernetes-ingress-controller/nginx-ingress-controller
     # We are using 0.24.1, but the registry API doesn't list this version for some reason.
