--- a/ansible/roles/kubernetes-apps/defaults/main/infra-gotify.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main/infra-gotify.yml
@@ -4,3 +4,11 @@ gotify_enabled: true
 
 gotify_default_admin_user: admin
 gotify_default_admin_password: clear_password
+
+gotify_users: []
+#  - name: user1
+#    password: password1
+#    admin: True
+#  - name: user2
+#    password: password2
+#    admin: False
