Add Gotify application creation

--- a/ansible/roles/kubernetes-apps/defaults/main/infra-gotify.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main/infra-gotify.yml
@@ -9,6 +9,14 @@ gotify_users: []
 #  - name: user1
 #    password: password1
 #    admin: True
+#    applications:
+#      - name: App1a
+#        desc: App 1a Desc
+#      - name: App1b
+#        desc: App 1b Desc
 #  - name: user2
 #    password: password2
 #    admin: False
+#    applications:
+#      - name: App2a
+#        desc: App 2a Desc
