--- a/ansible/roles/kubernetes-apps/tasks/apps/infra-gotify.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/infra-gotify.yml
@@ -54,3 +54,39 @@
     password: "{{ gotify_default_admin_password }}"
   with_items: "{{ gotify_users }}"
   when: item.name not in (gotify_existing_users.json | map(attribute='name'))
+
+- name: List existing applications
+  uri:
+    url: "https://127.0.0.1:{{ kubernetes_ingress_https_port }}/gotify/application"
+    method: GET
+    headers:
+      Host: "infra.{{ web_base_domain }}"
+    return_content: yes
+    validate_certs: no
+    force_basic_auth: yes
+    user: "{{ item.name }}"
+    password: "{{ item.password }}"
+  with_items: "{{ gotify_users }}"
+  register: gotify_existing_applications
+
+- set_fact:
+    gotify_existing_applications_cleaned: "{{ gotify_existing_applications_cleaned | default({}) | combine( { item.item.name: item.json } ) }}"
+  with_items: "{{ gotify_existing_applications.results }}"
+
+- name: Create missing applications
+  uri:
+    url: "https://127.0.0.1:{{ kubernetes_ingress_https_port }}/gotify/application"
+    method: POST
+    headers:
+      Host: "infra.{{ web_base_domain }}"
+    body:
+      name: "{{ item.1.name }}"
+      description: "{{ item.1.desc }}"
+    body_format: json
+    return_content: yes
+    validate_certs: no
+    force_basic_auth: yes
+    user: "{{ item.0.name }}"
+    password: "{{ item.0.password }}"
+  loop: "{{ gotify_users | subelements('applications') }}"
+  when: item.1.name not in (gotify_existing_applications_cleaned[item.0.name] | map(attribute='name'))
