--- a/ansible/install_applications/roles/auth-lemonldap.deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/auth-lemonldap.deploy/defaults/main.yml
@@ -9,6 +9,12 @@ kubernetes_user:
 docker_registry_port: 30500
 docker_registry_url: 127.0.0.1:{{ docker_registry_port }}
 
+zonemta_smtp_servername: zonemta.default
+zonemta_feeder_authentication_username: smtp
+zonemta_feeder_authentication_password: clear_password
+openldap_ldap_readonly_user_username: readonly
+openldap_ldap_readonly_user_dn: "cn={{ openldap_ldap_readonly_user_username }},{{ openldap_ldap_basedn }}"
+
 lemonldap_enabled: true
 
 lemonldap_fastcgi_port: 9000
