--- a/ansible/install_applications/roles/auth-phpldapadmin.deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/auth-phpldapadmin.deploy/defaults/main.yml
@@ -6,6 +6,9 @@ kubernetes_user:
   name: "{{ standard_user.name }}"
   home: "{{ standard_user.home }}"
 
+openldap_ldap_readonly_user_username: readonly
+openldap_ldap_readonly_user_dn: "cn={{ openldap_ldap_readonly_user_username }},{{ openldap_ldap_basedn }}"
+
 phpldapadmin_enabled: true
 
 phpldapadmin_ldap_servername: "{{ openldap_ldap_servername }}"
