--- a/ansible/install_applications/roles/download-sabnzbd.deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/download-sabnzbd.deploy/defaults/main.yml
@@ -6,6 +6,9 @@ kubernetes_user:
   name: "{{ standard_user.name }}"
   home: "{{ standard_user.home }}"
 
+zonemta_feeder_authentication_username: smtp
+zonemta_feeder_authentication_password: clear_password
+
 docker_registry_port: 30500
 docker_registry_url: 127.0.0.1:{{ docker_registry_port }}
 
