--- a/ansible/install_applications/roles/home-homeassistant.deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/home-homeassistant.deploy/defaults/main.yml
@@ -8,6 +8,7 @@ kubernetes_user:
 
 docker_registry_port: 30500
 docker_registry_url: 127.0.0.1:{{ docker_registry_port }}
+openldap_ldap_structure_users_ou_dn: "ou=users,{{ openldap_ldap_basedn }}"
 
 homeassistant_enabled: true
 
