--- a/ansible/install_applications/roles/auth-openldap.deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/auth-openldap.deploy/defaults/main.yml
@@ -1,31 +1,10 @@
 ---
 
-openldap_enabled: true
+openldap_enabled: True
 
-# OpenLDAP sererver name. We use the Kubernetes [service].[namespace] format
-openldap_ldap_servername: openldap.default
-openldap_ldap_organisation: Example Inc.
-openldap_ldap_domain: example.org
-#if empty automatically set from LDAP_DOMAIN
-openldap_ldap_basedn: "dc=example,dc=org"
-openldap_ldap_admin_dn: "cn=admin,{{ openldap_ldap_basedn }}"
-openldap_ldap_admin_password: admin
-openldap_ldap_config_password: config
-openldap_ldap_readonly_user_enabled: True
-openldap_ldap_readonly_user_username: readonly
-openldap_ldap_readonly_user_dn: "cn={{ openldap_ldap_readonly_user_username }},{{ openldap_ldap_basedn }}"
-openldap_ldap_readonly_user_password: readonly
-
-# Create the CA secret in the following namespaces
-openldap_exposed_namespaces:
-  - default
-  - monitoring
-  - logging
-
-openldap_ldap_structure_users_ou_dn: "ou=users,{{ openldap_ldap_basedn }}"
 #openldap_ldap_structure_groups_ou_dns:
 #  groups: "ou=groups,{{ openldap_ldap_basedn }}"
-#
+
 #openldap_ldap_users:
 #  - id: user1
 #    sn: User1
@@ -37,6 +16,7 @@ openldap_ldap_structure_users_ou_dn: "ou=users,{{ openldap_ldap_basedn }}"
 #    password: clear_password2
 #    email: user2@mail.net
 #    displayName: User2
+
 #openldap_ldap_groups:
 #  - id: test_group
 #    description: Test group
