--- a/ansible/install_applications/roles/auth-openldap.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/auth-openldap.deploy/tasks/main.yml
@@ -63,46 +63,46 @@
 - name: Create LDAP base OUs
   ldap_entry:
     server_uri: "{{ openldap_internal_uri }}"
-    bind_dn: "{{ openldap_ldap_admin_dn }}"
-    bind_pw: "{{ openldap_ldap_admin_password }}"
+    bind_dn: "{{ openldap.ldap.admin_dn }}"
+    bind_pw: "{{ openldap.ldap.admin_password }}"
     start_tls: yes
     validate_certs: no
     dn: "{{ item }}"
     objectClass: organizationalUnit
     state: present
   with_items:
-    - "{{ openldap_ldap_structure_users_ou_dn }}"
-    - "{{ openldap_ldap_structure_groups_ou_dns | dict2items | map(attribute='value') | list }}"
+    - "{{ openldap.ldap.structure_users_ou_dn }}"
+    - "{{ openldap.ldap.structure_groups_ou_dns | dict2items | map(attribute='value') | list }}"
 
 - name: Create LDAP users
   ldap_entry:
     server_uri: "{{ openldap_internal_uri }}"
-    bind_dn: "{{ openldap_ldap_admin_dn }}"
-    bind_pw: "{{ openldap_ldap_admin_password }}"
+    bind_dn: "{{ openldap.ldap.admin_dn }}"
+    bind_pw: "{{ openldap.ldap.admin_password }}"
     start_tls: yes
     validate_certs: no
-    dn: "cn={{ item.id }},{{ openldap_ldap_structure_users_ou_dn }}"
+    dn: "cn={{ item.id }},{{ openldap.ldap.structure_users_ou_dn }}"
     objectClass: inetOrgPerson
     state: present
     attributes:
       sn: "{{ item.sn }}"
-  with_items: "{{ openldap_ldap_users | default([]) }}"
+  with_items: "{{ openldap.ldap.users | default([]) }}"
   loop_control:
     label: "{{ item.id }}"
 
 - name: Set LDAP users attributes
   ldap_attr:
     server_uri: "{{ openldap_internal_uri }}"
-    bind_dn: "{{ openldap_ldap_admin_dn }}"
-    bind_pw: "{{ openldap_ldap_admin_password }}"
+    bind_dn: "{{ openldap.ldap.admin_dn }}"
+    bind_pw: "{{ openldap.ldap.admin_password }}"
     start_tls: yes
     validate_certs: no
-    dn: "cn={{ item.0.id }},{{ openldap_ldap_structure_users_ou_dn }}"
+    dn: "cn={{ item.0.id }},{{ openldap.ldap.structure_users_ou_dn }}"
     name: "{{ item.1.name }}"
     values: "{{ item.0[item.1.key] }}"
     state: exact
   with_nested:
-     - "{{ openldap_ldap_users | default([]) }}"
+     - "{{ openldap.ldap.users | default([]) }}"
      - - name: displayName
          key: displayName
        - name: uid
@@ -115,43 +115,43 @@
 - name: Set LDAP users password
   ldap_passwd:
     server_uri: "{{ openldap_internal_uri }}"
-    bind_dn: "{{ openldap_ldap_admin_dn }}"
-    bind_pw: "{{ openldap_ldap_admin_password }}"
+    bind_dn: "{{ openldap.ldap.admin_dn }}"
+    bind_pw: "{{ openldap.ldap.admin_password }}"
     start_tls: yes
     validate_certs: no
-    dn: "cn={{ item.id }},{{ openldap_ldap_structure_users_ou_dn }}"
+    dn: "cn={{ item.id }},{{ openldap.ldap.structure_users_ou_dn }}"
     passwd: "{{ item.password }}"
-  with_items: "{{ openldap_ldap_users | default([]) }}"
+  with_items: "{{ openldap.ldap.users | default([]) }}"
   loop_control:
     label: "{{ item.id }}"
 
 - name: Create LDAP groups
   ldap_entry:
     server_uri: "{{ openldap_internal_uri }}"
-    bind_dn: "{{ openldap_ldap_admin_dn }}"
-    bind_pw: "{{ openldap_ldap_admin_password }}"
+    bind_dn: "{{ openldap.ldap.admin_dn }}"
+    bind_pw: "{{ openldap.ldap.admin_password }}"
     start_tls: yes
     validate_certs: no
-    dn: "cn={{ item.id }},{{ openldap_ldap_structure_groups_ou_dns[item.ou] }}"
+    dn: "cn={{ item.id }},{{ openldap.ldap.structure_groups_ou_dns[item.ou] }}"
     objectClass: GroupOfUniqueNames
     state: present
     attributes:
       uniqueMember: ""
-  with_items: "{{ openldap_ldap_groups | default([]) }}"
+  with_items: "{{ openldap.ldap.groups | default([]) }}"
 
 - name: Set LDAP groups attributes
   ldap_attr:
     server_uri: "{{ openldap_internal_uri }}"
-    bind_dn: "{{ openldap_ldap_admin_dn }}"
-    bind_pw: "{{ openldap_ldap_admin_password }}"
+    bind_dn: "{{ openldap.ldap.admin_dn }}"
+    bind_pw: "{{ openldap.ldap.admin_password }}"
     start_tls: yes
     validate_certs: no
-    dn: "cn={{ item.0.id }},{{ openldap_ldap_structure_groups_ou_dns[item.0.ou] }}"
+    dn: "cn={{ item.0.id }},{{ openldap.ldap.structure_groups_ou_dns[item.0.ou] }}"
     name: "{{ item.1.name }}"
     values: "{{ item.0[item.1.key] }}"
     state: exact
   with_nested:
-     - "{{ openldap_ldap_groups | default([]) }}"
+     - "{{ openldap.ldap.groups | default([]) }}"
      - - name: description
          key: description
   loop_control:
@@ -160,15 +160,15 @@
 - name: Set LDAP groups members
   ldap_attr:
     server_uri: "{{ openldap_internal_uri }}"
-    bind_dn: "{{ openldap_ldap_admin_dn }}"
-    bind_pw: "{{ openldap_ldap_admin_password }}"
+    bind_dn: "{{ openldap.ldap.admin_dn }}"
+    bind_pw: "{{ openldap.ldap.admin_password }}"
     start_tls: yes
     validate_certs: no
-    dn: "cn={{ item.id }},{{ openldap_ldap_structure_groups_ou_dns[item.ou] }}"
+    dn: "cn={{ item.id }},{{ openldap.ldap.structure_groups_ou_dns[item.ou] }}"
     name: "uniqueMember"
-    values: "{{ item.members | map('regex_replace', '(.*)', 'cn=\\1,' + openldap_ldap_structure_users_ou_dn) | list }}"
+    values: "{{ item.members | map('regex_replace', '(.*)', 'cn=\\1,' + openldap.ldap.structure_users_ou_dn) | list }}"
     state: exact
-  with_items: "{{ openldap_ldap_groups | default([]) }}"
+  with_items: "{{ openldap.ldap.groups | default([]) }}"
   when: item.members | default([]) | length > 0
   loop_control:
     label: "{{ item.id }} : {{ item.members | default([]) }}"
