--- a/ansible/install_applications/roles/auth-phpldapadmin.deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/auth-phpldapadmin.deploy/defaults/main.yml
@@ -1,10 +1,7 @@
 ---
 
-openldap_ldap_readonly_user_username: readonly
-openldap_ldap_readonly_user_dn: "cn={{ openldap_ldap_readonly_user_username }},{{ openldap_ldap_basedn }}"
-
 phpldapadmin_enabled: true
 
-phpldapadmin_ldap_servername: "{{ openldap_ldap_servername }}"
-phpldapadmin_bind_id: "{{ openldap_ldap_readonly_user_dn }}"
-phpldapadmin_bind_password: "{{ openldap_ldap_readonly_user_password }}"
+phpldapadmin_ldap_servername: "{{ openldap.ldap.servername }}"
+phpldapadmin_bind_id: "{{ openldap.ldap.readonly_user_dn }}"
+phpldapadmin_bind_password: "{{ openldap.ldap.readonly_user_password }}"
