--- a/ansible/install_applications/roles/dev-gitlab.deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/dev-gitlab.deploy/defaults/main.yml
@@ -1,8 +1,5 @@
 ---
 
-openldap_ldap_readonly_user_username: readonly
-openldap_ldap_readonly_user_dn: "cn={{ openldap_ldap_readonly_user_username }},{{ openldap_ldap_basedn }}"
-openldap_ldap_structure_users_ou_dn: "ou=users,{{ openldap_ldap_basedn }}"
 zonemta_smtp_servername: zonemta.default
 zonemta_feeder_authentication_username: smtp
 zonemta_feeder_authentication_password: clear_password
@@ -30,7 +27,7 @@ gitlab_smtp_password: "{{ zonemta_feeder_authentication_password }}"
 gitlab_smtp_enable_starttls_auto: "true"
 gitlab_smtp_tls: "false"
 #gitlab_smtp_openssl_verify_mode: 'peer'
-gitlab_ldap_servername: "{{ openldap_ldap_servername }}"
-gitlab_ldap_user_base: "{{ openldap_ldap_structure_users_ou_dn }}"
-gitlab_ldap_manager_dn: "{{ openldap_ldap_readonly_user_dn }}"
-gitlab_ldap_manager_password: "{{ openldap_ldap_readonly_user_password }}"
+gitlab_ldap_servername: "{{ openldap.ldap.servername }}"
+gitlab_ldap_user_base: "{{ openldap.ldap.structure_users_ou_dn }}"
+gitlab_ldap_manager_dn: "{{ openldap.ldap.readonly_user_dn }}"
+gitlab_ldap_manager_password: "{{ openldap.ldap.readonly_user_password }}"
