--- a/ansible/install_applications/roles/home-nodered.deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/home-nodered.deploy/defaults/main.yml
@@ -2,15 +2,12 @@
 
 docker_registry_port: 30500
 docker_registry_url: 127.0.0.1:{{ docker_registry_port }}
-openldap_ldap_structure_users_ou_dn: "ou=users,{{ openldap_ldap_basedn }}"
-openldap_ldap_readonly_user_username: readonly
-openldap_ldap_readonly_user_dn: "cn={{ openldap_ldap_readonly_user_username }},{{ openldap_ldap_basedn }}"
 
 nodered_enabled: true
 
 nodered_context_root: /
-nodered_ldap_servername: "{{ openldap_ldap_servername }}"
-nodered_ldap_users_dn: "{{ openldap_ldap_structure_users_ou_dn }}"
-nodered_ldap_manager_dn: "{{ openldap_ldap_readonly_user_dn }}"
-nodered_ldap_manager_password: "{{ openldap_ldap_readonly_user_password }}"
-nodered_ldap_group_base: openldap_ldap_structure_groups_ou_dns['groups']
+nodered_ldap_servername: "{{ openldap.ldap.servername }}"
+nodered_ldap_users_dn: "{{ openldap.ldap.structure_users_ou_dn }}"
+nodered_ldap_manager_dn: "{{ openldap.ldap.readonly_user_dn }}"
+nodered_ldap_manager_password: "{{ openldap.ldap.readonly_user_password }}"
+nodered_ldap_group_base: openldap.ldap.structure_groups_ou_dns['groups']
