--- a/ansible/install_applications/roles/web-ttrss.deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/web-ttrss.deploy/defaults/main.yml
@@ -3,9 +3,6 @@
 docker_registry_port: 30500
 docker_registry_url: 127.0.0.1:{{ docker_registry_port }}
 
-openldap_ldap_readonly_user_username: readonly
-openldap_ldap_readonly_user_dn: "cn={{ openldap_ldap_readonly_user_username }},{{ openldap_ldap_basedn }}"
-openldap_ldap_structure_users_ou_dn: "ou=users,{{ openldap_ldap_basedn }}"
 zonemta_feeder_authentication_username: smtp
 zonemta_feeder_authentication_password: clear_password
 
@@ -18,10 +15,10 @@ ttrss_pqsql_password: clear_password
 # Keep the schema URL in sync with the image version
 ttrss_schema_url: https://git.tt-rss.org/fox/tt-rss/raw/19.2/schema/ttrss_schema_pgsql.sql
 
-ttrss_ldap_servername: "{{ openldap_ldap_servername }}"
-ttrss_ldap_users_dn: "{{ openldap_ldap_structure_users_ou_dn }}"
-ttrss_ldap_manager_dn: "{{ openldap_ldap_readonly_user_dn }}"
-ttrss_ldap_manager_password: "{{ openldap_ldap_readonly_user_password }}"
+ttrss_ldap_servername: "{{ openldap.ldap.servername }}"
+ttrss_ldap_users_dn: "{{ openldap.ldap.structure_users_ou_dn }}"
+ttrss_ldap_manager_dn: "{{ openldap.ldap.readonly_user_dn }}"
+ttrss_ldap_manager_password: "{{ openldap.ldap.readonly_user_password }}"
 
 ttrss_smtp_host: "{{ zonemta_smtp_servername }}"
 ttrss_smtp_port: 587
