Rework vars for home-homeassistant

--- a/ansible/install_applications/roles/home-homeassistant.deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/home-homeassistant.deploy/defaults/main.yml
@@ -3,16 +3,9 @@
 docker_registry_port: 30500
 docker_registry_url: 127.0.0.1:{{ docker_registry_port }}
 
-homeassistant_enabled: true
+zonemta_feeder_authentication_username: smtp
 
-homeassistant_mysql_user: homeassistant
-homeassistant_mysql_database: homeassistant
-homeassistant_mysql_password: clear_password
-homeassistant_mysql_root_password: clear_password
-homeassistant_mqtt_user: homeassistant
-homeassistant_mqtt_password: clear_password
-homeassistant_ldap_servername: "{{ openldap.ldap.servername }}"
-homeassistant_ldap_users_dn: "{{ openldap.ldap.structure_users_ou_dn }}"
+homeassistant_enabled: true
 
 #homeassistant_serial_remote_devices:
 #  test_tty1:
